--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,5 +1,5 @@
 production:
-  bucket: ENV['S3_BUCKET']
-  access_key_id: ENV['AWS_ACCESS_KEY_ID']
-  secret_access_key: ENV['AWS_SECRET_ACCESS_KEY']
+  bucket: <%= ENV['S3_BUCKET'] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 
